--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,21 @@
 {
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "image-downloader": "^4.3.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "API airbnc",
+	"version": "1.0.0",
+	"author": "Pablo Gualichico",
+	"scripts": {
+		"dev": "npx nodemon index.js",
+		"build": "node index.js"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^7.0.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	}
 }
