--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"author": "Pablo Gualichico",
 	"scripts": {
-		"dev": "npx nodemon index.js",
-		"build": "node index.js"
+		"dev": "npx nodemon api/index.js",
+		"build": "node api/index.js"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
